--- a/mentora/src/main/res/layout/activity_main.xml
+++ b/mentora/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="org.gdg.bcn.mentora.MainActivity">
+    tools:context="org.gdg.bcn.mentora.MentorsActivity">
 
     <TextView
         android:id="@+id/texthello"
